--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pytest = "*"
 flask = "*"
 requests = "*"
 dateparser = "*"
+python-dotenv = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
